--- a/owner/owner-client/src/app/_layouts/menus/menu-item-edit/menu-item-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-edit/menu-item-edit.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="menuItemForm" class="form-wrapper" [formGroup]="menuItemForm" (ngSubmit)="onSubmit()">
+<form *ngIf="menuItemForm && menuItem" class="form-wrapper" [formGroup]="menuItemForm" (ngSubmit)="onSubmit()">
     <div class="info">
         <div class="two-col">
             <mat-form-field appearance="outline" class="max-width">
@@ -8,7 +8,7 @@
 
             <mat-form-field appearance="outline" class="max-width">
                 <mat-label>Price</mat-label>
-                <input matInput placeholder="Enter menu item price" type="number" formControlName="price" />
+                <input matInput placeholder="Enter menu item price" formControlName="price" />
             </mat-form-field>
         </div>
 
@@ -20,13 +20,26 @@
     </div>
     <div class="permissions">
         <div class="two-col two-col-permissions">
-            <app-image-with-delete [isMain]="true" [image]="menuItemProfileImage"
-                (deleteImage)="onDeleteImage()"></app-image-with-delete>
-
+            <app-image-with-delete 
+                [isMain]="true" 
+                [image]="menuItemProfileImage"
+                (deleteImage)="onDeleteProfileImage($event)"
+            ></app-image-with-delete>
             <div class="permissions-with-btn">
                 <button type="button" mat-raised-button color="accent" (click)="imageBtn.click()">
                     <mat-icon>image</mat-icon>
                     Add Image
+                </button>
+
+                <button 
+                    type="button" 
+                    mat-raised-button 
+                    color="primary" 
+                    (click)="onSubmitProfileImage()"
+                    [disabled]="!menuItemProfileImageForm.has('image')"
+                >
+                    <mat-icon>image</mat-icon>
+                    Upload Image
                 </button>
 
                 <input type="file" style="display: none" #imageBtn (change)="onAddImage($event)" multiple="false"
@@ -41,10 +54,10 @@
                 <mat-form-field appearance="outline" class="max-width">
                     <mat-label>Special Offer Price</mat-label>
                     <input matInput placeholder="Enter menu item special offer price"
-                        formControlName="specialOfferPrice" type="number" [readonly]="!menuItemForm.get('hasSpecialOffer')?.value" />
+                        formControlName="specialOfferPrice" [readonly]="!menuItemForm.get('hasSpecialOffer')?.value" />
                 </mat-form-field>
 
-                <button mat-raised-button color="primary" [disabled]="menuItemForm.invalid">
+                <button mat-raised-button color="primary" [disabled]="menuItemForm.invalid || !menuItemForm.dirty">
                     <mat-icon>save</mat-icon>
                     Save
                 </button>
