--- a/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
@@ -128,7 +128,7 @@
         (change)="onProfileImage($event)"
       /> -->
 
-      <button mat-raised-button color="primary">
+      <button mat-raised-button color="primary" [disabled]="accountForm.invalid || !accountForm.dirty">
         <mat-icon>save</mat-icon>
         Save
       </button>
