Can get owner details

--- a/owner/owner-client/src/app/_layouts/account/account-info/account-info.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-info/account-info.component.html
@@ -13,7 +13,7 @@
       <mat-divider></mat-divider>
       <div class="info-row">
         <div>Last Name</div>
-        <div>{{ account.lastname }}</div>
+        <div>{{ account.lastName }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
@@ -38,7 +38,7 @@
       <mat-divider></mat-divider>
       <div class="info-row">
         <div>Phone</div>
-        <div>{{ account.phone }}</div>
+        <div>{{ account.phoneNumber }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
