Can upload profile owner image on client

--- a/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
@@ -109,7 +109,7 @@
     </mat-form-field>
 
     <div class="btn-wrapper">
-      <!-- <button
+      <button
         type="button"
         mat-raised-button
         color="accent"
@@ -126,7 +126,12 @@
         multiple="false"
         accept="image/*"
         (change)="onProfileImage($event)"
-      /> -->
+      />
+
+      <button (click)="onSubmitProfileImage()" type="button" mat-raised-button color="primary" [disabled]="!profileImageForm.has('image')">
+        <mat-icon>save</mat-icon>
+        Save Profile Image
+      </button>
 
       <button mat-raised-button color="primary" [disabled]="accountForm.invalid || !accountForm.dirty">
         <mat-icon>save</mat-icon>
@@ -136,11 +141,9 @@
   </div>
 </form>
 
-<!-- <div class="profile-image-wrapper">
+<div class="profile-image-wrapper">
   <app-image-with-delete
     [isMain]="true"
     [image]="profileImage"
-    (deleteImage)="onDeleteProfileImage()"
   ></app-image-with-delete>
 </div>
- -->
