--- a/owner/owner-client/src/app/_layouts/account/account.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="account">
-  <app-profile-header
-    [profileHeader]="account.profileHeader"
-    [delete]="false"
-    (onEdit)="onEditAccount($event)"
-  ></app-profile-header>
+  <app-account-header
+    [accountHeader]="account.profileHeader"
+    (edit)="onEditAccount($event)"
+    (delete)="onDeleteAccount($event)"
+    ></app-account-header>
   <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
     <mat-tab label="Info">
       <app-account-info [account]="account"></app-account-info>
@@ -12,3 +12,4 @@
     <mat-tab label="Third"> Content 3 </mat-tab>
   </mat-tab-group>
 </ng-container>
+
