Added account header to employee details

--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.html
@@ -32,21 +32,21 @@
 
     <div class="info-row">
       <div>Username</div>
-      <div>{{ employee.username }}</div>
+      <div>{{ employee.profileHeader.username }}</div>
     </div>
 
     <mat-divider></mat-divider>
 
     <div class="info-row">
       <div>Full Name</div>
-      <div>{{ employee.firstName }} {{ employee.lastName }}</div>
+      <div>{{ employee.profileHeader.firstName }} {{ employee.profileHeader.lastName }}</div>
     </div>
 
     <mat-divider></mat-divider>
 
     <div class="info-row">
       <div>Restaurant</div>
-      <div>{{ employee.restaurant.name }}</div>
+      <div>{{ employee.restaurant }}</div>
     </div>
 
     <mat-divider></mat-divider>
