Can mark all notifications as read

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
@@ -27,7 +27,7 @@
           let index = index
         "
       >
-        <app-notification [notification]="notification"></app-notification>
+        <app-notification [notification]="notification" (notificationOpen)="notificationOpen($event)"></app-notification>
         <mat-divider
           *ngIf="index !== notificationMenu.notifications.length"
         ></mat-divider>
