Can create chat and see it on frontend

--- a/owner/owner-client/src/app/_layouts/chats/chat-create-dialog/chat-create-dialog.component.html
+++ b/owner/owner-client/src/app/_layouts/chats/chat-create-dialog/chat-create-dialog.component.html
@@ -56,7 +56,7 @@
   </div>
 
   <div class="btn-wrapper">
-    <button type="button" mat-raised-button color="warn" (click)="onClose()">
+    <button type="button" mat-raised-button color="warn" (click)="onClose(null)">
       Cancel
     </button>
     <button
