Can send messages to each others

--- a/owner/owner-client/src/app/_components/chat/message/message.component.html
+++ b/owner/owner-client/src/app/_components/chat/message/message.component.html
@@ -43,11 +43,11 @@
           'main-main-wrapper': message.isMine
         }"
       >
+      <div class="username">{{ message.sender.username }}</div>
         <div class="time">
           <mat-icon inline>schedule</mat-icon>
           <div>{{ message.createdAt | timeAgo }}</div>
         </div>
-        <div class="username">zuna21</div>
       </div>
     </div>
   </div>
