--- a/owner/owner-client/src/app/_components/chat/message/message.component.css
+++ b/owner/owner-client/src/app/_components/chat/message/message.component.css
@@ -5,6 +5,7 @@
   flex-direction: row;
   position: relative;
   border-radius: 5px;
+  gap: 0.5rem;
 }
 
 .main-main-wrapper {
@@ -62,11 +63,11 @@
 
 .message-footer {
   display: flex;
-  align-items: center;
   color: var(--primary);
   margin-top: 0.5rem;
   font-size: 10px;
-  justify-content: space-between;
+  flex-direction: column;
+  line-height: 1.2;
 }
 
 .time {
