--- a/owner/owner-client/src/app/_layouts/chats/side-nav-chat/side-nav-chat.component.html
+++ b/owner/owner-client/src/app/_layouts/chats/side-nav-chat/side-nav-chat.component.html
@@ -48,5 +48,5 @@
     </div>
   </div>
 
-  <div class="background" *ngIf="chat.lastMessage.isSeen"></div>
+  <div class="background" *ngIf="!chat.isSeen"></div>
 </div>
