--- a/owner/owner-client/src/app/_layouts/chats/open-new-chat-dialog/open-new-chat-dialog.component.html
+++ b/owner/owner-client/src/app/_layouts/chats/open-new-chat-dialog/open-new-chat-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="main-wrapper">
   <div class="search-bar-wrapper">
-    <app-search-bar></app-search-bar>
+    <app-search-bar (search)="onSearchChat($event)"></app-search-bar>
   </div>
 
   <div class="divider-wrapper">
