Can update menu

--- a/clients/owner-client/src/app/_layouts/menus/menus-edit/menus-edit.component.html
+++ b/clients/owner-client/src/app/_layouts/menus/menus-edit/menus-edit.component.html
@@ -37,7 +37,7 @@
         <button
           mat-raised-button
           color="primary"
-          [disabled]="menuForm.invalid"
+          [disabled]="menuForm.invalid || !menuForm.dirty"
           (click)="onSubmit()"
         >
           <mat-icon>save</mat-icon>
