--- a/clients/employee-client/src/app/_layouts/menus/menus-edit/menus-edit.component.html
+++ b/clients/employee-client/src/app/_layouts/menus/menus-edit/menus-edit.component.html
@@ -1,9 +1,18 @@
 <div class="main-wrapper center" *ngIf="menuForm">
     <form class="form-wrapper" [formGroup]="menuForm" (ngSubmit)="(menuForm)">
-      <mat-form-field appearance="outline">
-        <mat-label>Name</mat-label>
-        <input matInput placeholder="Enter menu name" formControlName="name" />
-      </mat-form-field>
+  
+      <div class="two-col">
+
+        <mat-form-field appearance="outline">
+          <mat-label>Name</mat-label>
+          <input matInput placeholder="Enter menu name" formControlName="name" />
+        </mat-form-field>
+        
+        <div class="toggle-wrapper">
+          <mat-slide-toggle color="primary" formControlName="isActive">Active</mat-slide-toggle>
+        </div>
+      </div>
+
   
       <mat-form-field appearance="outline">
         <mat-label>Description</mat-label>
@@ -13,31 +22,13 @@
           formControlName="description"
         ></textarea>
       </mat-form-field>
-  
-      <div class="two-col">
-        <mat-form-field appearance="outline">
-          <mat-label>Restaurants</mat-label>
-          <mat-select formControlName="restaurantId">
-            <mat-option
-              *ngFor="let restaurant of menu?.ownerRestaurants"
-              [value]="restaurant.id"
-            >
-              {{ restaurant.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-  
-        <div class="toggle-wrapper">
-          <mat-slide-toggle color="primary" formControlName="isActive">Active</mat-slide-toggle>
-        </div>
-      </div>
 
   
       <div class="btn-wrapper">
         <button
           mat-raised-button
           color="primary"
-          [disabled]="menuForm.invalid"
+          [disabled]="menuForm.invalid || !menuForm.dirty"
           (click)="onSubmit()"
         >
           <mat-icon>save</mat-icon>
