Can get notifications with signalR

--- a/clients/employee-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
+++ b/clients/employee-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.html
@@ -5,7 +5,7 @@
     (click)="openNotifications = !openNotifications"
   >
     <mat-icon
-      matBadge="{{ notificationMenu.notSeenNumber }}"
+      matBadge="{{ notificationMenu.notSeenNumber > 0 ? notificationMenu.notSeenNumber : null }}"
       aria-hidden="false"
       >notifications</mat-icon
     >
