Added new messages functionality in chat component

--- a/clients/employee-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
+++ b/clients/employee-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
@@ -1,6 +1,6 @@
 <div class="main-wrapper" *ngIf="chatsMenu">
   <button type="button" mat-icon-button (click)="openMessages = !openMessages">
-    <mat-icon matBadge="{{ chatsMenu.notSeenNumber }}" aria-hidden="false">chat</mat-icon>
+    <mat-icon matBadge="{{ chatsMenu.notSeenNumber > 0 ? chatsMenu.notSeenNumber: null }}" aria-hidden="false">chat</mat-icon>
   </button>
 
   <div class="notifications-menu-wrapper" *ngIf="openMessages">
