--- a/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.html
+++ b/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
     <mat-drawer #drawer [mode]="'over'">I'm a drawer</mat-drawer>
     <mat-drawer-content>
         <app-header (openSidenavEmitter)="drawer.toggle()"></app-header>
-        
+        <router-outlet></router-outlet>        
     </mat-drawer-content>
   </mat-drawer-container>
   
