Added search bar

--- a/clients/customer-client/src/app/_layouts/restaurants/restaurants.component.html
+++ b/clients/customer-client/src/app/_layouts/restaurants/restaurants.component.html
@@ -1,5 +1,10 @@
-<div class="restaurants-wrapper">
-    <ng-container *ngFor="let restaurant of restaurants">
-        <app-restaurant-card [restaurant]="restaurant"></app-restaurant-card>
-    </ng-container>
+<div class="main-wrapper">
+    <div class="search-wrapper">
+        <app-search-bar></app-search-bar>
+    </div>
+    <div class="restaurants-wrapper">
+        <ng-container *ngFor="let restaurant of restaurants">
+            <app-restaurant-card [restaurant]="restaurant"></app-restaurant-card>
+        </ng-container>
+    </div>
 </div>
