--- a/clients/customer-client/src/app/_layouts/restaurants/restaurants.component.css
+++ b/clients/customer-client/src/app/_layouts/restaurants/restaurants.component.css
@@ -1,6 +1,20 @@
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-wrapper {
+  width: 100%;
+  padding: 0 1rem;
+  max-width: 700px;
+  margin: 1rem 0;
+}
+
 .restaurants-wrapper {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
   justify-content: center;
+
 }
+
