--- a/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.html
+++ b/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.html
@@ -1,25 +1,32 @@
-<mat-expansion-panel hideToggle>
+<mat-expansion-panel hideToggle class="main-wrapper">
   <mat-expansion-panel-header>
     <mat-panel-title> Ime proizvoda </mat-panel-title>
     <mat-panel-description class="panel-description">
-      <div class="price-wrapper">$24</div>
+      <div class="price-wrapper">
+        <del>$24</del>
+        <div>$20</div>
+      </div>
       <div class="img-wrapper">
-        <img
-          class="image"
+        <div class="jesus center" *ngIf="isImageLoading">
+          <mat-spinner></mat-spinner>
+        </div>
+        <img class="image"
           src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages6.alphacoders.com%2F304%2F304628.jpg&f=1&nofb=1&ipt=dc82afe3f9494fe76d4a2cb9245a82d4ed5a75686684045a0dae85dd45b86421&ipo=images"
-          alt="profile image"
-        />
+          alt="profile image" (load)="isImageLoading = false" />
       </div>
     </mat-panel-description>
   </mat-expansion-panel-header>
+  <gallery class="gallery-wrapper" [items]="[]" gallerize thumbPosition="right"></gallery>
+
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod pariatur
     autem voluptatibus eum deleniti explicabo consequuntur sint labore totam ab
     sequi, perferendis repellendus, nobis illo vitae odio, aliquam tenetur
     ratione.
   </p>
-  
+
   <mat-action-row>
-    <button mat-stroked-button color="primary">Add To Order</button>
+    <button mat-stroked-button color="primary"><mat-icon>restaurant_menu</mat-icon>Hrana</button>
+    <button mat-raised-button color="accent"><mat-icon>add_circle</mat-icon> Add To Order</button>
   </mat-action-row>
 </mat-expansion-panel>
