--- a/clients/customer-client/src/app/_layouts/home/home.component.html
+++ b/clients/customer-client/src/app/_layouts/home/home.component.html
@@ -1,1 +1,9 @@
 <app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
+<app-menu-item-row></app-menu-item-row>
