--- a/clients/customer-client/src/styles.css
+++ b/clients/customer-client/src/styles.css
@@ -31,6 +31,14 @@ body {
   height: auto;
 }
 
+.jesus {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .center {
   display: flex;
   align-items: center;
