--- a/clients/customer-client/src/app/_layouts/restaurants/restaurant-details/restaurant-details.component.html
+++ b/clients/customer-client/src/app/_layouts/restaurants/restaurant-details/restaurant-details.component.html
@@ -21,7 +21,7 @@
                 <mat-icon>group</mat-icon>
                 <div class="btn-text">{{ restaurant.employeesNumber }}</div>
             </button>
-            <button type="button" mat-raised-button>
+            <button type="button" mat-raised-button routerLink="/restaurants/{{restaurantId}}/make-order">
                 <mat-icon>restaurant_menu</mat-icon>
                 <div class="btn-text">{{ restaurant.menusNumber }}</div>
             </button>
@@ -60,13 +60,13 @@
       </div>
 
       <div class="table social">
-        <button type="button" mat-button>
+        <button type="button" mat-raised-button>
             <a href="{{restaurant.facebookUrl}}">Facebook</a>
         </button>
-        <button type="button" mat-button>
+        <button type="button" mat-raised-button>
             <a href="{{restaurant.instagramUrl}}">Instagram</a>
         </button>
-        <button type="button" mat-button>
+        <button type="button" mat-raised-button>
             <a href="{{restaurant.websiteUrl}}">Website</a>
         </button>
       </div>
