--- a/clients/customer-client/src/app/_layouts/make-order/make-order.component.html
+++ b/clients/customer-client/src/app/_layouts/make-order/make-order.component.html
@@ -1,1 +1,8 @@
-<p>make-order works!</p>
+<mat-tab-group>
+    <mat-tab label="Menu Items">
+        <app-menu-items></app-menu-items>
+    </mat-tab>
+    <mat-tab label="Menus">
+        <app-menus></app-menus>
+    </mat-tab>
+ </mat-tab-group>
