--- a/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.css
+++ b/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.css
@@ -1,4 +1,8 @@
 .main-wrapper {
+    padding: 0.5rem 0;
+}
+
+.special-offer {
     border: 1px solid var(--primary);
 }
 
@@ -27,4 +31,8 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+}
+
+.title {
+    font-size: 10px;
 }
