--- a/clients/customer-client/src/app/_layouts/restaurants/restaurant-details/restaurant-details.component.html
+++ b/clients/customer-client/src/app/_layouts/restaurants/restaurant-details/restaurant-details.component.html
@@ -3,6 +3,7 @@
     [items]="imageGallery"
     gallerize
     thumbPosition="bottom"
+    *ngIf="isLoopFinished"
   ></gallery>
 
   <div class="info">
