--- a/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.css
+++ b/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.css
@@ -18,6 +18,7 @@
     background-color: black;
     border: 1px solid var(--primary);
     border-radius: 5px;
+    position: relative;
     overflow: hidden;
 }
 
