--- a/clients/customer-client/src/app/_layouts/make-order/menus/menus.component.html
+++ b/clients/customer-client/src/app/_layouts/make-order/menus/menus.component.html
@@ -1,1 +1,11 @@
-<p>menus works!</p>
+<div class="main-wrapper">
+    <div class="search-bar-wrapper">
+        <app-search-bar [placeholder]="'Search by name...'"></app-search-bar>
+    </div>
+
+    <div class="menus-wrapper">
+        <ng-container *ngFor="let menu of menus">
+            <app-menu-card [menu]="menu" (viewMoreEmitter)="onMenu($event)"></app-menu-card>
+        </ng-container>
+    </div>
+</div>
