--- a/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.css
+++ b/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.css
@@ -1,3 +1,13 @@
 .main-wrapper {
     height: 100%;
 }
+
+.order-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    cursor: pointer;
+}
