--- a/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.html
+++ b/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.html
@@ -1,9 +1,10 @@
 <mat-drawer-container class="main-wrapper" [hasBackdrop]="true">
-    <mat-drawer #drawer [mode]="'over'">I'm a drawer</mat-drawer>
-    <mat-drawer-content>
-        <app-header (openSidenavEmitter)="drawer.toggle()"></app-header>
-        <router-outlet></router-outlet>        
-    </mat-drawer-content>
-  </mat-drawer-container>
-  
-
+  <mat-drawer #drawer [mode]="'over'">I'm a drawer</mat-drawer>
+  <mat-drawer-content>
+    <app-header (openSidenavEmitter)="drawer.toggle()"></app-header>
+    <router-outlet></router-outlet>
+    <div class="order-wrapper">
+        <app-order></app-order>
+    </div>
+  </mat-drawer-content>
+</mat-drawer-container>
