--- a/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.css
+++ b/clients/customer-client/src/app/_layouts/main-layout/main-layout.component.css
@@ -6,8 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     top: 50%;
     right: 0;
     cursor: pointer;
+    z-index: 999999999;
 }
