--- a/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.html
+++ b/clients/customer-client/src/app/_components/menu-item-row/menu-item-row.component.html
@@ -25,8 +25,11 @@
     {{ menuItem.description }}
   </p>
 
-  <mat-action-row>
+  <mat-action-row *ngIf="hasBtns">
     <button mat-stroked-button color="primary"><mat-icon>restaurant_menu</mat-icon>{{ menuItem.menu.name }}</button>
     <button mat-raised-button color="accent" (click)="onAddToOrder()"><mat-icon>add_circle</mat-icon> Add To Order</button>
+  </mat-action-row>
+  <mat-action-row *ngIf="hasDeleteBtn">
+    <button type="button" (click)="onDelete()" mat-stroked-button style="background-color: var(--warning);"><mat-icon>delete</mat-icon>Delete</button>
   </mat-action-row>
 </mat-expansion-panel>
