--- a/clients/customer-client/src/app/_layouts/make-order/order-dialog/order-dialog.component.html
+++ b/clients/customer-client/src/app/_layouts/make-order/order-dialog/order-dialog.component.html
@@ -1,27 +1,24 @@
-<form class="main-wrapper" *ngIf="order && order.menuItems.length > 0">
+<form class="main-wrapper" *ngIf="order && order.menuItems.length > 0 && orderForm" [formGroup]="orderForm"
+  (ngSubmit)="onSubmit()">
   <h1>Your Order</h1>
   <mat-form-field appearance="outline">
     <mat-label>Select table</mat-label>
-    <mat-select>
-      <mat-option *ngFor="let food of [1, 2, 4]" [value]="food">
-        {{food}}
+    <mat-select formControlName="tableId">
+      <mat-option *ngFor="let table of tables" [value]="table.id">
+        {{ table.name }}
       </mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field appearance="outline">
     <mat-label>Note for waiter</mat-label>
-    <textarea matInput></textarea>
+    <textarea matInput formControlName="note"></textarea>
   </mat-form-field>
 
   <div class="menu-item-wrapper">
     <ng-container *ngFor="let menuItem of order.menuItems; let index=index;">
-      <app-menu-item-row 
-      [menuItem]="menuItem" 
-      [hasBtns]="false" 
-      [hasDeleteBtn]="true"
-      (deleteEmitter)="onDelete(index)"
-    ></app-menu-item-row>
+      <app-menu-item-row [menuItem]="menuItem" [hasBtns]="false" [hasDeleteBtn]="true"
+        (deleteEmitter)="onDelete(index)"></app-menu-item-row>
     </ng-container>
   </div>
 
@@ -30,12 +27,13 @@
       <div class="little-table-content">Total items: {{ order.totalItems }}</div>
     </div>
     <div class="little-table center">
-      <div class="little-table-content">{{ order.totalPrice }} KM</div>
+      <div class="little-table-content">{{ order.totalPrice | number : '1.2-2' }} KM</div>
     </div>
   </div>
 
   <div class="btn-wrapper max-width">
-    <button class="max-width order-btn" mat-raised-button>Order</button>
+    <button class="max-width" style="background-color: var(--success);" mat-raised-button
+      [disabled]="orderForm.invalid || order.menuItems.length <= 0">Order</button>
   </div>
 
 </form>
